--- a/css/main.css
+++ b/css/main.css
@@ -37,3 +37,17 @@ seafoam: rgb(132, 175, 183);
 .module {
     fill: #e6e4e2
 }
+
+.active_bg {
+    fill:rgb(132, 175, 183);
+    animation: shadeBg 1s;
+}
+
+@keyframes shadeBg {
+    0% {
+        opacity: 0.25;
+    }
+    100% {
+        opacity: 1.0
+    }
+}
