--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,3 @@
-html, body {
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.container-wrap {
-    display: flex;
-    justify-content: center;
-    width: 100vw;
-    height: 100vh;
-}
-
 /*
 COLOR PALETTE
 dark gray: #c3bfbb;
@@ -16,12 +5,26 @@ light gray: #e6e4e2;
 seafoam: rgb(132, 175, 183);
 */
 
+html, body {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container-wrap {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+}
+
 #wheel {
     width: 600px;
 }
+
 .core_background {
-    fill: #84afb7;
+    fill:rgb(132, 175, 183);
 }
+
 .core_text {
     fill: #fff;
 }
@@ -41,6 +44,11 @@ seafoam: rgb(132, 175, 183);
 
 .active_bg {
     fill:rgb(132, 175, 183);
+    animation: shadeBg 1s;
+}
+
+.hovered_bg {
+    fill: rgb(132, 175, 183);
     animation: shadeBg 1s;
 }
 
