--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ html, body {
     fill: #e6e4e2
 }
 
-.active_bg, .core_active_bg {
+.active_bg {
     fill:rgb(83, 133, 141);
     animation: shadeBg 1s;
 }
