--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,6 @@ seafoam: rgb(132, 175, 183);
 */
 
 html, body {
-    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -19,6 +18,11 @@ html, body {
 
 #wheel {
     width: 600px;
+}
+
+#product-info {
+    padding: 100px 200px 0 100px;
+    width: 30%;
 }
 
 .core_background {
