--- a/css/main.css
+++ b/css/main.css
@@ -7,31 +7,27 @@ seafoam: rgb(132, 175, 183);
 
 html, body {
     font-family: Arial, Helvetica, sans-serif;
-    width: 100%;
-}
-
-.container-wrap {
-    display: flex;
-    justify-content: center;
-    width: 90%;
-    height: 100vh;
+    font-size: 14px;
     padding: 40px;
 }
 
+.wrapper {
+    display: grid;
+    grid-template-columns: 45% 55%;
+    grid-gap: 10px;
+    width: 80%;
+    margin: auto;
+}
+
 #wheel {
-    width: 500px;
+    width: 100%;
+    margin: auto;
 }
 
-#product-info {
-    padding: 30px;
-    box-sizing: border-box;
+#product-info, #product-wheel  {
+    padding: 0 50px;
 }
 
-
-#product-info {
-    width: 50%;
-
-}
 .core_background {
     fill:rgb(132, 175, 183);
 }
